--- a/se1400/utahtech3/style.css
+++ b/se1400/utahtech3/style.css
@@ -63,9 +63,14 @@ footer {
     min-width: 960px;
     max-width: 2048px;
     box-shadow: 0px 3px 3px rgba(66,66,66,0.3);
+    background-color: #ffffff;
 }
 #homehero {
     background-image: url(images/homehero.jpg);
+    background-size: cover;
+    height: 300px;
+    background-position: center;
+    background-repeat: no-repeat;
 }
 h3{
  color: #003058;
@@ -74,19 +79,15 @@ main{
     padding-left: 2rem;
     padding-right: 2rem;
 }
-#homehero{
-    background-size: cover;
-    height: 300px;
-    background-position: center;
-    background-repeat: no-repeat;
-}
 #studenthero{
+    background-image: url(images/studenthero.jpg);
     background-size: cover;
     height: 300px;
     background-position: center;
     background-repeat: no-repeat;
 }
 #facultyhero{
+    background-image: url(images/facultyhero.jpg);
     background-size: cover;
     height: 300px;
     background-position: center;
