--- a/se1400/utahtech3/style.css
+++ b/se1400/utahtech3/style.css
@@ -1,9 +1,12 @@
+* { box-sizing: border-box; 
+}
 body {
    background-color: #ffffff;
    color: #666666;
    font-family: Verdana, Arial, sans-serif;
    background-image: linear-gradient(to bottom, #eeeeee, #ffffff);
    background-attachment:fixed;
+   margin: 0;
 }
 
 header {
