--- a/se1400/utahtech4/style.css
+++ b/se1400/utahtech4/style.css
@@ -12,6 +12,11 @@ header {
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
+header a {
+    color: white;
+    text-decoration: none;
+}
+
 h1 {
     line-height: 140%;
     padding: 0.5rem;
@@ -20,16 +25,30 @@ h1 {
     background-repeat: no-repeat;
     padding-left: 1em;
     background-origin: content-box;
-    margin-bottom: 0;
+    margin:0;
+
 }
+
 
 nav {
    font-weight:bold;
-   background-color: #F3F3F3;
-   padding-top: 0.5rem;
-   padding-right: 0.5rem;
-   padding-bottom: 0.5rem;
-   padding-left: 2rem; 
+   background-color: #424242;
+   padding:0;
+   margin:0;
+   position: sticky; 
+   top:0;
+}
+
+nav ul{
+    margin:0;
+    padding:0;
+    display: flex;
+    flex-flow: row nowrap;
+    list-style-type: none;
+}
+
+nav ul li{
+    width: 100%;
 }
 
 h2{
@@ -57,13 +76,14 @@ footer {
 }
 
 #wrapper {
-    width: 80%;
-    margin-right: auto;
-    margin-left: auto;
-    min-width: 960px;
-    max-width: 2048px;
-    box-shadow: 0px 3px 3px rgba(66,66,66,0.3);
-    background-color: #ffffff;
+   display: grid;
+   grid-auto-rows: minmax(0, auto);
+   grid-template-columns: minmax(0px, 1fr) repeat(6, minmax(0, 175px)) minmax(0px, 1fr);
+}
+
+header{
+    grid-row: 1 / 2;
+    grid-column: 2 /-2;
 }
 #homehero {
     background-image: url(images/homehero.jpg);
@@ -94,4 +114,32 @@ main{
     background-repeat: no-repeat;
 }
 nav a { text-decoration: none;
+    color: white;
+    padding: 1rem 0rem;
+    display: block;
+    text-align:center;
+ }
+ nav{
+    grid-row: 2 /3;
+    grid-column: 2 / -3;
+ }
+
+ nav a:hover{
+    background-color: #BA1C21;
+ }
+ #homehero, #studenthero, #facultyhero {
+    grid-row: 3 /4;
+    grid-column: 2 / -3;
+ }
+ main{
+    grid-row: 4 /5;
+    grid-column: 2 / -2;
+ }
+ footer{
+    grid-row: 5 /6;
+    grid-column: 2 / -2;
+ }
+ main img {
+    float; right;
+    padding-left: 2rem;
  }
