--- a/se1400/utahtech4/style.css
+++ b/se1400/utahtech4/style.css
@@ -96,6 +96,7 @@ h3{
  color: #003058;
 }
 main{
+    background-color:#ffffff
     padding-left: 2rem;
     padding-right: 2rem;
 }
@@ -132,6 +133,7 @@ nav a { text-decoration: none;
     grid-column: 2 / -2;
  }
  main{
+    background-color:#ffffff
     grid-row: 4 /5;
     grid-column: 2 / -2;
  }
@@ -140,6 +142,6 @@ nav a { text-decoration: none;
     grid-column: 2 / -2;
  }
  main img {
-    float; right;
+    float: right;
     padding-left: 2rem;
  }
