--- a/se1400/milestone3/style.css
+++ b/se1400/milestone3/style.css
@@ -4,4 +4,39 @@
    grid-template-columns: minmax(0px, 1fr) repeat(6, minmax(0, 175px)) minmax(0px, 1fr);
 }
 
+   header{
+   height: 150px;
+    grid-row: 1 / 2;
+    grid-column: 2 /-2;
+    background-color: #e63115;
 
+}
+
+nav{
+height: 75px;
+    grid-row: 2 / 3;
+    grid-column: 1 /10;
+    background-color: #410ae7;
+}
+
+
+.hero {
+   height: 200px;
+    grid-row: 3 / 4;
+    grid-column: 1 /10;
+    background-color: #f5e9a1;
+}
+
+main{
+height: 300px;
+grid-row: 5 / 6;
+grid-column: 1 /10;
+background-color: rgb(252, 176, 254);
+}
+
+footer{
+   height: 40px;
+    grid-row: 6 / 7;
+    grid-column: 1 /10;
+    background-color: #1a055e;
+}
