--- a/se1400/milestone3/style.css
+++ b/se1400/milestone3/style.css
@@ -2,6 +2,7 @@
    display: grid;
    grid-auto-rows: minmax(0, auto);
    grid-template-columns: minmax(0px, 1fr) repeat(6, minmax(0, 175px)) minmax(0px, 1fr);
+   margin: 15px;
 }
 
    header{
